--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "csv-parse": "0.0.6",
     "slug": "^0.8.0",
     "to-markdown": "0.0.2",
+    "uuid": "^2.0.1",
     "xml2js": "^0.4.4"
   }
 }
