--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "bluebird": "^2.3.10",
     "csv-parse": "0.0.6",
+    "lodash": "^2.4.1",
     "slug": "^0.8.0",
     "to-markdown": "0.0.2",
     "uuid": "^2.0.1",
-    "xml2js": "^0.4.4"
+    "xml2js": "^0.4.4",
+    "lodash": "^2.4.1"
   }
 }
